# truther

./: Polling the Blogosphere Development.ipynb  README.md
lexicon/: causals  conditionals  negative_adjectives  negative_verbs  positive_nouns  positive_verbs
truther/: README.md  pyproject.toml  setup.py
truther/src/: __init__.py
truther/src/truther/: __init__.py  sentence.py  veridicality_elements.py  veridicality_orientation.py  veridicality_transformation.py  veridicity.py
truther/src/truther/lexicon/: conditionals  counter_factive_verbs  factive_verbs  negative_nouns  negative_sources  negative_verbs  neutral_verbs  positive_adjectives  positive_nouns  positive_verbs
truther/tests/: test_veridicality_elements.py  test_veridicality_orientation.py  test_veridicality_transformation.py  test_veridicity.py
