[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "truther"
version = "0.1"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "spacy>3.7.0",
    "miniKanren>=1.0.3"
]
authors = [
    { name = "Jason S. Kessler", email = "jason.kessler+truther@gmail.com" }
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["nlp", "veridicity", "semantics"]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["lexicon/*"]

[project.urls]
Homepage = "https://github.com/jasonKessler/truther"