[project]
name = "truther"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
    "spacy>3.7.0",
    "miniKanren>=1.0.3"
]
authors = [
    { name = "Jason S. Kessler", email = "jason.kessler+truther@gmail.com" }
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["nlp", "veridicity", "semantics"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["lexicon/*"]

[project.urls]
Homepage = "https://github.com/jasonKessler/truther"